force-app/main/default/objects/Service_Status__c/Service_Status__c.object-meta.xml
<CustomObject>
    <label>Service Status</label>
    <nameField>
        <displayFormat>SS-{0000000}</displayFormat>
        <label>Service Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>