force-app/main/default/objects/Service_Status__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To identify if the data supplied relates to an existing case</description>
    <label>CaseId</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Status</relationshipLabel>
    <relationshipName>Service_Status</relationshipName>
    <type>Lookup</type>
</CustomField>