force-app/main/default/objects/Service_Status__c/fields/Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount__c</fullName>
    <description>To hold charge amount</description>
    <label>Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>