force-app/main/default/objects/Service_Status__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <description>Field to hold Charge type</description>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charge</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>