force-app/main/default/objects/Service_Status__c/fields/CS_Email__c.field-meta.xml
<CustomField>
    <fullName>CS_Email__c</fullName>
    <description>To hold customer service email address</description>
    <label>Customer Service Email</label>
    <type>Email</type>
</CustomField>