force-app/main/default/objects/Service_Status__c/fields/CS_Phone__c.field-meta.xml
<CustomField>
    <fullName>CS_Phone__c</fullName>
    <description>To hold customer service phone</description>
    <label>Customer Service Phone</label>
    <type>Phone</type>
</CustomField>