force-app/main/default/objects/Service_Status__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>To hold Image URL</description>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>