force-app/main/default/objects/Service_Status__c/fields/Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>Incident_Number__c</fullName>
    <description>To hold INC number</description>
    <label>Incident Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>