force-app/main/default/objects/Service_Status__c/fields/Is_Ready_For_Notification__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_For_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicates the record which is ready for MC to pull

This value will be updated by SFDC Trigger where applicable.</description>
    <label>Is Ready For Notification</label>
    <type>Checkbox</type>
</CustomField>