force-app/main/default/objects/Service_Status__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>To hold Line of business</description>
    <label>Line of Business</label>
    <length>1</length>
    <type>Text</type>
</CustomField>