force-app/main/default/objects/Service_Status__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>To identify the location associated to the data</description>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Status</relationshipLabel>
    <relationshipName>Service_Status</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>