force-app/main/default/objects/Service_Status__c/fields/Message_Status__c.field-meta.xml
<CustomField>
    <fullName>Message_Status__c</fullName>
    <description>Pending- Initial value once SSIS inserts the record
Complete- Value set by SFDC trigger, once record is processed by trigger
Processed by MC- Value set by MC once record gets processed.</description>
    <label>Message Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Processed by MC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>