force-app/main/default/objects/Service_Status__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description>To notify to MC that which notification type to be sent</description>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Notification_Type</valueSetName>
    </valueSet>
</CustomField>