force-app/main/default/objects/Service_Status__c/fields/Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_URL__c</fullName>
    <defaultValue>if(ISBLANK($CustomMetadata.Integration_Request_URLs__mdt.Portal_Login_URL.End_Point__c 
), &apos;&apos;,$CustomMetadata.Integration_Request_URLs__mdt.Portal_Login_URL.End_Point__c)</defaultValue>
    <description>To hold Portal URL, Default value will be fetched from custom metadata for this field</description>
    <label>Portal URL</label>
    <type>Url</type>
</CustomField>