force-app/main/default/objects/Service_Status__c/fields/Service_City__c.field-meta.xml
<CustomField>
    <fullName>Service_City__c</fullName>
    <description>To  hold the Service City  from OCS</description>
    <label>Service City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>