force-app/main/default/objects/Service_Status__c/fields/Service_Country__c.field-meta.xml
<CustomField>
    <fullName>Service_Country__c</fullName>
    <description>To  hold the Service Country from OCS</description>
    <label>Service Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>