force-app/main/default/objects/Service_Status__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>To hold  the date that the service should be performed</description>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>