force-app/main/default/objects/Service_Status__c/fields/Service_Postalcode__c.field-meta.xml
<CustomField>
    <fullName>Service_Postalcode__c</fullName>
    <description>To  hold the Service Postal Code from OCS</description>
    <label>Service Postalcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>