force-app/main/default/objects/Service_Status__c/fields/Service_State__c.field-meta.xml
<CustomField>
    <fullName>Service_State__c</fullName>
    <description>To  hold the Service State from OCS</description>
    <label>Service State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>