force-app/main/default/objects/Service_Status__c/fields/Service_Street__c.field-meta.xml
<CustomField>
    <fullName>Service_Street__c</fullName>
    <description>To  hold the Service address/street  from OCS</description>
    <label>Service Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>