force-app/main/default/objects/Service_Status__c/fields/WorkOrderId__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To identify if the data supplied relates to an existing work order</description>
    <label>WorkOrderId</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Service Status</relationshipLabel>
    <relationshipName>Service_Status</relationshipName>
    <type>Lookup</type>
</CustomField>